@@ -11,3 +11,4 @@ TYPE                 int(11)          Receiver::Type
 MAC_ADDRESS          char(18)
 LAST_SEEN            datetime
 UPDATE_FIRMWARE      int(11)          0=False, 1=True
+DEFAULT_FEED_ID	     int(11)          From FEEDS.ID
