@@ -2,7 +2,7 @@
 //
 // Edit a GlassNet Receiver
 //
-//   (C) Copyright 2016-2022 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2016-2025 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -53,6 +53,22 @@ EditReceiver::EditReceiver(QWidget *parent)
   edit_mac_edit->setMaxLength(17);
 
   //
+  // Default Feed
+  //
+  edit_default_feed_label=new QLabel(tr("Default Feed")+":",this);
+  edit_default_feed_label->setFont(bold_font);
+  edit_default_feed_label->setAlignment(Qt::AlignRight|Qt::AlignVCenter);
+  edit_default_feed_box=new ComboBox(this);
+  edit_default_feed_model=new SqlTableModel(true,this);
+  QString sql=QString("select ")+
+    "`ID`,"+    // 00
+    "`NAME` "+  // 01
+    "from `FEEDS` order by `NAME`";
+  edit_default_feed_model->setQuery(sql);
+  edit_default_feed_box->setModel(edit_default_feed_model);
+  edit_default_feed_box->setModelColumn(1);
+  
+  //
   // Remarks
   //
   edit_remarks_label=new QLabel(tr("Notes"),this);
@@ -96,6 +112,8 @@ int EditReceiver::exec(int *receiver_id)
     Receiver *rcvr=new Receiver(*receiver_id);
     edit_type_box->setCurrentItemData(rcvr->type());
     edit_mac_edit->setText(rcvr->macAddress());
+    edit_default_feed_box->
+     setCurrentIndex(edit_default_feed_model->rowNumber(rcvr->defaultFeedId()));
     edit_remarks_textedit->setHtml(rcvr->remarks());
     delete rcvr;
   }
@@ -124,6 +142,8 @@ void EditReceiver::okData()
     Receiver *rcvr=new Receiver(*edit_receiver_id);
     rcvr->setType((Receiver::Type)edit_type_box->currentItemData().toInt());
     rcvr->setMacAddress(edit_mac_edit->text().toUpper());
+    rcvr->setDefaultFeedId(edit_default_feed_model->
+			   id(edit_default_feed_box->currentIndex()).toInt());
     rcvr->setRemarks(edit_remarks_textedit->toHtml());
     delete rcvr;
   }
@@ -141,11 +161,14 @@ void EditReceiver::cancelData()
 void EditReceiver::resizeEvent(QResizeEvent *e)
 {
   edit_type_label->setGeometry(10,10,120,20);
-  edit_type_box->setGeometry(135,10,size().width()-160,20);
+  edit_type_box->setGeometry(135,10,size().width()-380,20);
 
-  edit_mac_label->setGeometry(10,32,120,20);
-  edit_mac_edit->setGeometry(135,32,size().width()-160,20);
+  edit_mac_label->setGeometry(size().width()-265,10,120,20);
+  edit_mac_edit->setGeometry(size().width()-140,10,130,20);
 
+  edit_default_feed_label->setGeometry(10,32,120,20);
+  edit_default_feed_box->setGeometry(135,32,size().width()-145,20);
+  
   edit_remarks_label->setGeometry(15,54,size().width()-25,20);
   edit_remarks_textedit->
     setGeometry(10,74,size().width()-20,size().height()-140);
