@@ -2,7 +2,7 @@
 //
 // Edit a GlassNet Receiver
 //
-//   (C) Copyright 2016-2022 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2016-2025 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -29,6 +29,7 @@
 #include <QTextEdit>
 
 #include "combobox.h"
+#include "sqltablemodel.h"
 
 class EditReceiver : public QDialog
 {
@@ -53,6 +54,9 @@ class EditReceiver : public QDialog
   ComboBox *edit_type_box;
   QLabel *edit_mac_label;
   QLineEdit *edit_mac_edit;
+  QLabel *edit_default_feed_label;
+  QComboBox *edit_default_feed_box;
+  SqlTableModel *edit_default_feed_model;
   QLabel *edit_remarks_label;
   QTextEdit *edit_remarks_textedit;
   QPushButton *edit_ok_button;
